--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/xtnd-dynamics/types#readme",
   "private": false,
   "devDependencies": {
-    "lint": "^0.7.0"
+    "lint": "~^0.7.0"
   },
   "dependencies": {
     "@types/express": "^4.17.0",
